Fixes line bug on mobile

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -32,4 +32,5 @@ html, body, .is-fullsize {
 }
 .right-card {
     overflow-y: scroll;
+    min-height: 100%;
 }
